--- a/static/index.html
+++ b/static/index.html
@@ -60,8 +60,8 @@
     <div class="row">
       <div class="dir" data-dir="up">⬆️</div>
       <div class="dir" data-dir="down">⬇️</div>
-      <div class="dir" data-dir="in">↔️</div>
-      <div class="dir" data-dir="out">↕️</div>
+      <div class="dir" data-dir="in">⬇️<br />⬆️</div>
+      <div class="dir" data-dir="out">⬆️<br />⬇️</div>
     </div>
     <div class="row">
       <div class="pad" data-effect="power" data-preset="sunset">
